# HW_8

./: CMakeLists.txt  main.cpp
Classes/: Animal.cpp  Animal.h  Bear.cpp  Bear.h  Man.cpp  Man.h  ManBearPig.cpp  ManBearPig.h  Pig.cpp  Pig.h  Unit.cpp  Unit.h
